Calendario de pagos popup

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -98,6 +98,7 @@
     "/prod/assets/images/svg_nino_cuerpo.svg": "/prod/assets/images/svg_nino_cuerpo.svg",
     "/prod/assets/images/svg_nino_mano.svg": "/prod/assets/images/svg_nino_mano.svg",
     "/prod/assets/images/svg_nino_mano.webp": "/prod/assets/images/svg_nino_mano.webp",
+    "/prod/assets/images/top_calendario.webp": "/prod/assets/images/top_calendario.webp",
     "/prod/assets/images/top_gestion_documentos.webp": "/prod/assets/images/top_gestion_documentos.webp",
     "/prod/assets/images/top_gobierno.webp": "/prod/assets/images/top_gobierno.webp",
     "/prod/assets/images/top_nuestra_empresa.png": "/prod/assets/images/top_nuestra_empresa.png",
@@ -116,6 +117,7 @@
     "/prod/assets/js/app.js": "/prod/assets/js/app.js",
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
+    "/prod/calendario_pagos/index.html": "/prod/calendario_pagos/index.html",
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
     "/prod/favicon.ico": "/prod/favicon.ico",
     "/prod/gestion_documentos/index.html": "/prod/gestion_documentos/index.html",
@@ -229,6 +231,7 @@
     "/final/assets/images/svg_nino_cuerpo.svg": "/final/assets/images/svg_nino_cuerpo.svg",
     "/final/assets/images/svg_nino_mano.svg": "/final/assets/images/svg_nino_mano.svg",
     "/final/assets/images/svg_nino_mano.webp": "/final/assets/images/svg_nino_mano.webp",
+    "/final/assets/images/top_calendario.webp": "/final/assets/images/top_calendario.webp",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
     "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
@@ -247,6 +250,7 @@
     "/final/assets/js/app.js": "/final/assets/js/app.js",
     "/final/assets/js/app.js.LICENSE.txt": "/final/assets/js/app.js.LICENSE.txt",
     "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
+    "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
     "/final/gestion_documentos/index.html": "/final/gestion_documentos/index.html",
@@ -360,6 +364,7 @@
     "/qa/assets/images/svg_nino_cuerpo.svg": "/qa/assets/images/svg_nino_cuerpo.svg",
     "/qa/assets/images/svg_nino_mano.svg": "/qa/assets/images/svg_nino_mano.svg",
     "/qa/assets/images/svg_nino_mano.webp": "/qa/assets/images/svg_nino_mano.webp",
+    "/qa/assets/images/top_calendario.webp": "/qa/assets/images/top_calendario.webp",
     "/qa/assets/images/top_gestion_documentos.webp": "/qa/assets/images/top_gestion_documentos.webp",
     "/qa/assets/images/top_gobierno.webp": "/qa/assets/images/top_gobierno.webp",
     "/qa/assets/images/top_nuestra_empresa.png": "/qa/assets/images/top_nuestra_empresa.png",
@@ -378,6 +383,7 @@
     "/qa/assets/js/app.js": "/qa/assets/js/app.js",
     "/qa/assets/js/app.js.LICENSE.txt": "/qa/assets/js/app.js.LICENSE.txt",
     "/qa/assets/js/app.min.js": "/qa/assets/js/app.min.js",
+    "/qa/calendario_pagos/index.html": "/qa/calendario_pagos/index.html",
     "/qa/consumidor_financiero/index.html": "/qa/consumidor_financiero/index.html",
     "/qa/favicon.ico": "/qa/favicon.ico",
     "/qa/gestion_documentos/index.html": "/qa/gestion_documentos/index.html",
