--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@studio-freight/lenis": "^1.0.27",
     "alpinejs": "^3.13.1",
     "chart.js": "^4.4.0",
+    "dayjs-business-days2": "^1.2.2",
     "del": "^7.1.0",
     "gsap": "npm:@gsap/simply@^3.12.2",
+    "js-year-calendar": "^2.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "rimraf": "^5.0.5",
