ajuste de imagen y popup

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -111,6 +111,7 @@
     "/prod/assets/images/top_seguro_previsional.png": "/prod/assets/images/top_seguro_previsional.png",
     "/prod/assets/images/top_seguro_previsional.webp": "/prod/assets/images/top_seguro_previsional.webp",
     "/prod/assets/images/top_solicitudes.webp": "/prod/assets/images/top_solicitudes.webp",
+    "/prod/assets/images/top_suscribete.png": "/prod/assets/images/top_suscribete.png",
     "/prod/assets/images/top_suscribete.webp": "/prod/assets/images/top_suscribete.webp",
     "/prod/assets/images/vigilado.png": "/prod/assets/images/vigilado.png",
     "/prod/assets/images/vigilado_vert.png": "/prod/assets/images/vigilado_vert.png",
@@ -244,6 +245,7 @@
     "/final/assets/images/top_seguro_previsional.png": "/final/assets/images/top_seguro_previsional.png",
     "/final/assets/images/top_seguro_previsional.webp": "/final/assets/images/top_seguro_previsional.webp",
     "/final/assets/images/top_solicitudes.webp": "/final/assets/images/top_solicitudes.webp",
+    "/final/assets/images/top_suscribete.png": "/final/assets/images/top_suscribete.png",
     "/final/assets/images/top_suscribete.webp": "/final/assets/images/top_suscribete.webp",
     "/final/assets/images/vigilado.png": "/final/assets/images/vigilado.png",
     "/final/assets/images/vigilado_vert.png": "/final/assets/images/vigilado_vert.png",
@@ -377,6 +379,7 @@
     "/qa/assets/images/top_seguro_previsional.png": "/qa/assets/images/top_seguro_previsional.png",
     "/qa/assets/images/top_seguro_previsional.webp": "/qa/assets/images/top_seguro_previsional.webp",
     "/qa/assets/images/top_solicitudes.webp": "/qa/assets/images/top_solicitudes.webp",
+    "/qa/assets/images/top_suscribete.png": "/qa/assets/images/top_suscribete.png",
     "/qa/assets/images/top_suscribete.webp": "/qa/assets/images/top_suscribete.webp",
     "/qa/assets/images/vigilado.png": "/qa/assets/images/vigilado.png",
     "/qa/assets/images/vigilado_vert.png": "/qa/assets/images/vigilado_vert.png",
