--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -9,12 +9,22 @@
     "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf": "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/prod/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/prod/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
+    "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
+    "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
+    "/prod/assets/documentos/SGC-PO08 JD Policy.pdf": "/prod/assets/documentos/SGC-PO08 JD Policy.pdf",
+    "/prod/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf": "/prod/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf",
     "/prod/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/prod/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
     "/prod/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/prod/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
+    "/prod/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/prod/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf": "/prod/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf",
     "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/prod/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
     "/prod/assets/fonts/33112a1a3babe854-s.p.woff": "/prod/assets/fonts/33112a1a3babe854-s.p.woff",
     "/prod/assets/fonts/60964256366d74f2-s.p.woff": "/prod/assets/fonts/60964256366d74f2-s.p.woff",
@@ -143,12 +153,22 @@
     "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
+    "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
+    "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
+    "/final/assets/documentos/SGC-PO08 JD Policy.pdf": "/final/assets/documentos/SGC-PO08 JD Policy.pdf",
+    "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf": "/final/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf",
     "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/final/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
     "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/final/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
+    "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/final/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/final/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf": "/final/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf",
     "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/final/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
     "/final/assets/fonts/33112a1a3babe854-s.p.woff": "/final/assets/fonts/33112a1a3babe854-s.p.woff",
     "/final/assets/fonts/60964256366d74f2-s.p.woff": "/final/assets/fonts/60964256366d74f2-s.p.woff",
@@ -277,12 +297,22 @@
     "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf": "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/qa/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/qa/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
+    "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
+    "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
+    "/qa/assets/documentos/SGC-PO08 JD Policy.pdf": "/qa/assets/documentos/SGC-PO08 JD Policy.pdf",
+    "/qa/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf": "/qa/assets/documentos/SGC-PO10 Estatutos Asulado v2.pdf",
     "/qa/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf": "/qa/assets/documentos/SOLICITUD-SUSTITUCION-PENSIONAL-ASULADO.pdf",
     "/qa/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf": "/qa/assets/documentos/Tips-de-ciberseguridad-Asulado.pdf",
+    "/qa/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf": "/qa/assets/documentos/_Codigo-de-etica-y-conducta-Asulado.pdf",
+    "/qa/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/_Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/qa/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf": "/qa/assets/documentos/news/SGC-PO10 Estatutos Asulado v2.pdf",
     "/qa/assets/fonts/0a5eb17cd5d9a87b-s.p.woff": "/qa/assets/fonts/0a5eb17cd5d9a87b-s.p.woff",
     "/qa/assets/fonts/33112a1a3babe854-s.p.woff": "/qa/assets/fonts/33112a1a3babe854-s.p.woff",
     "/qa/assets/fonts/60964256366d74f2-s.p.woff": "/qa/assets/fonts/60964256366d74f2-s.p.woff",
