--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -9,11 +9,13 @@
     "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/prod/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/prod/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf": "/prod/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/prod/assets/documentos/Financial Statements.pdf": "/prod/assets/documentos/Financial Statements.pdf",
     "/prod/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/prod/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/prod/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/prod/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/prod/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
@@ -152,11 +154,13 @@
     "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/final/assets/documentos/Financial Statements.pdf": "/final/assets/documentos/Financial Statements.pdf",
     "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
@@ -295,11 +299,13 @@
     "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/qa/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/qa/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf": "/qa/assets/documentos/Estatutos-sociales-Asulado.pdf",
+    "/qa/assets/documentos/Financial Statements.pdf": "/qa/assets/documentos/Financial Statements.pdf",
     "/qa/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/qa/assets/documentos/Grupo Sura Buen Gobierno.pdf",
     "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/qa/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/qa/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/qa/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
+    "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
