blog y lusa chat

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -54,8 +54,15 @@
     "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
     "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
+    "/prod/assets/images/blog/b1_1.jpg": "/prod/assets/images/blog/b1_1.jpg",
+    "/prod/assets/images/blog/b1_2.jpg": "/prod/assets/images/blog/b1_2.jpg",
+    "/prod/assets/images/blog/b1_3.jpg": "/prod/assets/images/blog/b1_3.jpg",
+    "/prod/assets/images/blog/b1_top.jpg": "/prod/assets/images/blog/b1_top.jpg",
+    "/prod/assets/images/blog/b1_top.jpg.jpg": "/prod/assets/images/blog/b1_top.jpg.jpg",
+    "/prod/assets/images/blog/b2_top.jpg.jpg": "/prod/assets/images/blog/b2_top.jpg.jpg",
     "/prod/assets/images/blog/blog_1.jpg": "/prod/assets/images/blog/blog_1.jpg",
     "/prod/assets/images/blog/blog_1.webp": "/prod/assets/images/blog/blog_1.webp",
+    "/prod/assets/images/blog/blog_1_top.jpg": "/prod/assets/images/blog/blog_1_top.jpg",
     "/prod/assets/images/blog/blog_2.jpg": "/prod/assets/images/blog/blog_2.jpg",
     "/prod/assets/images/blog/blog_2.webp": "/prod/assets/images/blog/blog_2.webp",
     "/prod/assets/images/blog/blog_3.jpg": "/prod/assets/images/blog/blog_3.jpg",
@@ -129,6 +136,8 @@
     "/prod/assets/js/app.js": "/prod/assets/js/app.js",
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
+    "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
+    "/prod/blog/como-ahorrar-al-mercar/index.html": "/prod/blog/como-ahorrar-al-mercar/index.html",
     "/prod/calendario_pagos/index.html": "/prod/calendario_pagos/index.html",
     "/prod/consumidor_financiero/index.html": "/prod/consumidor_financiero/index.html",
     "/prod/favicon.ico": "/prod/favicon.ico",
@@ -199,8 +208,15 @@
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
+    "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
+    "/final/assets/images/blog/b1_2.jpg": "/final/assets/images/blog/b1_2.jpg",
+    "/final/assets/images/blog/b1_3.jpg": "/final/assets/images/blog/b1_3.jpg",
+    "/final/assets/images/blog/b1_top.jpg": "/final/assets/images/blog/b1_top.jpg",
+    "/final/assets/images/blog/b1_top.jpg.jpg": "/final/assets/images/blog/b1_top.jpg.jpg",
+    "/final/assets/images/blog/b2_top.jpg.jpg": "/final/assets/images/blog/b2_top.jpg.jpg",
     "/final/assets/images/blog/blog_1.jpg": "/final/assets/images/blog/blog_1.jpg",
     "/final/assets/images/blog/blog_1.webp": "/final/assets/images/blog/blog_1.webp",
+    "/final/assets/images/blog/blog_1_top.jpg": "/final/assets/images/blog/blog_1_top.jpg",
     "/final/assets/images/blog/blog_2.jpg": "/final/assets/images/blog/blog_2.jpg",
     "/final/assets/images/blog/blog_2.webp": "/final/assets/images/blog/blog_2.webp",
     "/final/assets/images/blog/blog_3.jpg": "/final/assets/images/blog/blog_3.jpg",
@@ -274,6 +290,8 @@
     "/final/assets/js/app.js": "/final/assets/js/app.js",
     "/final/assets/js/app.js.LICENSE.txt": "/final/assets/js/app.js.LICENSE.txt",
     "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
+    "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
+    "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
@@ -344,8 +362,15 @@
     "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
     "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
+    "/qa/assets/images/blog/b1_1.jpg": "/qa/assets/images/blog/b1_1.jpg",
+    "/qa/assets/images/blog/b1_2.jpg": "/qa/assets/images/blog/b1_2.jpg",
+    "/qa/assets/images/blog/b1_3.jpg": "/qa/assets/images/blog/b1_3.jpg",
+    "/qa/assets/images/blog/b1_top.jpg": "/qa/assets/images/blog/b1_top.jpg",
+    "/qa/assets/images/blog/b1_top.jpg.jpg": "/qa/assets/images/blog/b1_top.jpg.jpg",
+    "/qa/assets/images/blog/b2_top.jpg.jpg": "/qa/assets/images/blog/b2_top.jpg.jpg",
     "/qa/assets/images/blog/blog_1.jpg": "/qa/assets/images/blog/blog_1.jpg",
     "/qa/assets/images/blog/blog_1.webp": "/qa/assets/images/blog/blog_1.webp",
+    "/qa/assets/images/blog/blog_1_top.jpg": "/qa/assets/images/blog/blog_1_top.jpg",
     "/qa/assets/images/blog/blog_2.jpg": "/qa/assets/images/blog/blog_2.jpg",
     "/qa/assets/images/blog/blog_2.webp": "/qa/assets/images/blog/blog_2.webp",
     "/qa/assets/images/blog/blog_3.jpg": "/qa/assets/images/blog/blog_3.jpg",
@@ -419,6 +444,8 @@
     "/qa/assets/js/app.js": "/qa/assets/js/app.js",
     "/qa/assets/js/app.js.LICENSE.txt": "/qa/assets/js/app.js.LICENSE.txt",
     "/qa/assets/js/app.min.js": "/qa/assets/js/app.min.js",
+    "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
+    "/qa/blog/como-ahorrar-al-mercar/index.html": "/qa/blog/como-ahorrar-al-mercar/index.html",
     "/qa/calendario_pagos/index.html": "/qa/calendario_pagos/index.html",
     "/qa/consumidor_financiero/index.html": "/qa/consumidor_financiero/index.html",
     "/qa/favicon.ico": "/qa/favicon.ico",
