--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "MELBORP",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
