banner home new

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -52,6 +52,10 @@
     "/prod/assets/images/asu-favicon-alt.png": "/prod/assets/images/asu-favicon-alt.png",
     "/prod/assets/images/asulado_disc.png": "/prod/assets/images/asulado_disc.png",
     "/prod/assets/images/ayuda.webp": "/prod/assets/images/ayuda.webp",
+    "/prod/assets/images/banner_1_bg.png": "/prod/assets/images/banner_1_bg.png",
+    "/prod/assets/images/banner_1_bg.webp": "/prod/assets/images/banner_1_bg.webp",
+    "/prod/assets/images/banner_1_foto.png": "/prod/assets/images/banner_1_foto.png",
+    "/prod/assets/images/banner_1_foto.webp": "/prod/assets/images/banner_1_foto.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
     "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
     "/prod/assets/images/blog/b1_1.jpg": "/prod/assets/images/blog/b1_1.jpg",
@@ -116,6 +120,8 @@
     "/prod/assets/images/svg_nino_cuerpo.svg": "/prod/assets/images/svg_nino_cuerpo.svg",
     "/prod/assets/images/svg_nino_mano.svg": "/prod/assets/images/svg_nino_mano.svg",
     "/prod/assets/images/svg_nino_mano.webp": "/prod/assets/images/svg_nino_mano.webp",
+    "/prod/assets/images/top_aumento_mesada.jpg": "/prod/assets/images/top_aumento_mesada.jpg",
+    "/prod/assets/images/top_aumento_mesada.webp": "/prod/assets/images/top_aumento_mesada.webp",
     "/prod/assets/images/top_calendario.webp": "/prod/assets/images/top_calendario.webp",
     "/prod/assets/images/top_gestion_documentos.webp": "/prod/assets/images/top_gestion_documentos.webp",
     "/prod/assets/images/top_gobierno.webp": "/prod/assets/images/top_gobierno.webp",
@@ -145,6 +151,7 @@
     "/prod/gobierno_corporativo/1_ppios.html": "/prod/gobierno_corporativo/1_ppios.html",
     "/prod/gobierno_corporativo/index.html": "/prod/gobierno_corporativo/index.html",
     "/prod/index.html": "/prod/index.html",
+    "/prod/mesada_pensional/index.html": "/prod/mesada_pensional/index.html",
     "/prod/nuestra_empresa/index.html": "/prod/nuestra_empresa/index.html",
     "/prod/pension_invalidez/index.html": "/prod/pension_invalidez/index.html",
     "/prod/pension_sobreviviencia/index.html": "/prod/pension_sobreviviencia/index.html",
@@ -206,6 +213,10 @@
     "/final/assets/images/asu-favicon-alt.png": "/final/assets/images/asu-favicon-alt.png",
     "/final/assets/images/asulado_disc.png": "/final/assets/images/asulado_disc.png",
     "/final/assets/images/ayuda.webp": "/final/assets/images/ayuda.webp",
+    "/final/assets/images/banner_1_bg.png": "/final/assets/images/banner_1_bg.png",
+    "/final/assets/images/banner_1_bg.webp": "/final/assets/images/banner_1_bg.webp",
+    "/final/assets/images/banner_1_foto.png": "/final/assets/images/banner_1_foto.png",
+    "/final/assets/images/banner_1_foto.webp": "/final/assets/images/banner_1_foto.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
@@ -270,6 +281,8 @@
     "/final/assets/images/svg_nino_cuerpo.svg": "/final/assets/images/svg_nino_cuerpo.svg",
     "/final/assets/images/svg_nino_mano.svg": "/final/assets/images/svg_nino_mano.svg",
     "/final/assets/images/svg_nino_mano.webp": "/final/assets/images/svg_nino_mano.webp",
+    "/final/assets/images/top_aumento_mesada.jpg": "/final/assets/images/top_aumento_mesada.jpg",
+    "/final/assets/images/top_aumento_mesada.webp": "/final/assets/images/top_aumento_mesada.webp",
     "/final/assets/images/top_calendario.webp": "/final/assets/images/top_calendario.webp",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
@@ -299,6 +312,7 @@
     "/final/gobierno_corporativo/1_ppios.html": "/final/gobierno_corporativo/1_ppios.html",
     "/final/gobierno_corporativo/index.html": "/final/gobierno_corporativo/index.html",
     "/final/index.html": "/final/index.html",
+    "/final/mesada_pensional/index.html": "/final/mesada_pensional/index.html",
     "/final/nuestra_empresa/index.html": "/final/nuestra_empresa/index.html",
     "/final/pension_invalidez/index.html": "/final/pension_invalidez/index.html",
     "/final/pension_sobreviviencia/index.html": "/final/pension_sobreviviencia/index.html",
@@ -360,6 +374,10 @@
     "/qa/assets/images/asu-favicon-alt.png": "/qa/assets/images/asu-favicon-alt.png",
     "/qa/assets/images/asulado_disc.png": "/qa/assets/images/asulado_disc.png",
     "/qa/assets/images/ayuda.webp": "/qa/assets/images/ayuda.webp",
+    "/qa/assets/images/banner_1_bg.png": "/qa/assets/images/banner_1_bg.png",
+    "/qa/assets/images/banner_1_bg.webp": "/qa/assets/images/banner_1_bg.webp",
+    "/qa/assets/images/banner_1_foto.png": "/qa/assets/images/banner_1_foto.png",
+    "/qa/assets/images/banner_1_foto.webp": "/qa/assets/images/banner_1_foto.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
     "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
     "/qa/assets/images/blog/b1_1.jpg": "/qa/assets/images/blog/b1_1.jpg",
@@ -424,6 +442,8 @@
     "/qa/assets/images/svg_nino_cuerpo.svg": "/qa/assets/images/svg_nino_cuerpo.svg",
     "/qa/assets/images/svg_nino_mano.svg": "/qa/assets/images/svg_nino_mano.svg",
     "/qa/assets/images/svg_nino_mano.webp": "/qa/assets/images/svg_nino_mano.webp",
+    "/qa/assets/images/top_aumento_mesada.jpg": "/qa/assets/images/top_aumento_mesada.jpg",
+    "/qa/assets/images/top_aumento_mesada.webp": "/qa/assets/images/top_aumento_mesada.webp",
     "/qa/assets/images/top_calendario.webp": "/qa/assets/images/top_calendario.webp",
     "/qa/assets/images/top_gestion_documentos.webp": "/qa/assets/images/top_gestion_documentos.webp",
     "/qa/assets/images/top_gobierno.webp": "/qa/assets/images/top_gobierno.webp",
@@ -453,6 +473,7 @@
     "/qa/gobierno_corporativo/1_ppios.html": "/qa/gobierno_corporativo/1_ppios.html",
     "/qa/gobierno_corporativo/index.html": "/qa/gobierno_corporativo/index.html",
     "/qa/index.html": "/qa/index.html",
+    "/qa/mesada_pensional/index.html": "/qa/mesada_pensional/index.html",
     "/qa/nuestra_empresa/index.html": "/qa/nuestra_empresa/index.html",
     "/qa/pension_invalidez/index.html": "/qa/pension_invalidez/index.html",
     "/qa/pension_sobreviviencia/index.html": "/qa/pension_sobreviviencia/index.html",
