--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -142,6 +142,7 @@
     "/prod/assets/js/app.js": "/prod/assets/js/app.js",
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
+    "/prod/assets/sitemap.xml": "/prod/assets/sitemap.xml",
     "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/prod/blog/como-ahorrar-al-mercar/index.html": "/prod/blog/como-ahorrar-al-mercar/index.html",
     "/prod/calendario_pagos/index.html": "/prod/calendario_pagos/index.html",
@@ -303,6 +304,7 @@
     "/final/assets/js/app.js": "/final/assets/js/app.js",
     "/final/assets/js/app.js.LICENSE.txt": "/final/assets/js/app.js.LICENSE.txt",
     "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
+    "/final/assets/sitemap.xml": "/final/assets/sitemap.xml",
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
@@ -464,6 +466,7 @@
     "/qa/assets/js/app.js": "/qa/assets/js/app.js",
     "/qa/assets/js/app.js.LICENSE.txt": "/qa/assets/js/app.js.LICENSE.txt",
     "/qa/assets/js/app.min.js": "/qa/assets/js/app.min.js",
+    "/qa/assets/sitemap.xml": "/qa/assets/sitemap.xml",
     "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/qa/blog/como-ahorrar-al-mercar/index.html": "/qa/blog/como-ahorrar-al-mercar/index.html",
     "/qa/calendario_pagos/index.html": "/qa/calendario_pagos/index.html",
