--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,8 +1,12 @@
 {
     "/dist/assets/js/app.js": "/dist/assets/js/app.js",
+    "/dist/assets/js/portal.js": "/dist/assets/js/portal.js",
+    "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
+    "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
+    "/prod/assets/css/portal.css": "/prod/assets/css/portal.css",
     "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/prod/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/prod/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/prod/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
@@ -104,6 +108,7 @@
     "/prod/assets/images/junta/junta-sebastian.png": "/prod/assets/images/junta/junta-sebastian.png",
     "/prod/assets/images/junta/junta-stella.png": "/prod/assets/images/junta/junta-stella.png",
     "/prod/assets/images/junta/junta-tatiana.png": "/prod/assets/images/junta/junta-tatiana.png",
+    "/prod/assets/images/logo_asulado.svg": "/prod/assets/images/logo_asulado.svg",
     "/prod/assets/images/logo_col.png": "/prod/assets/images/logo_col.png",
     "/prod/assets/images/logo_corner.png": "/prod/assets/images/logo_corner.png",
     "/prod/assets/images/logo_sura.png": "/prod/assets/images/logo_sura.png",
@@ -142,6 +147,8 @@
     "/prod/assets/js/app.js": "/prod/assets/js/app.js",
     "/prod/assets/js/app.js.LICENSE.txt": "/prod/assets/js/app.js.LICENSE.txt",
     "/prod/assets/js/app.min.js": "/prod/assets/js/app.min.js",
+    "/prod/assets/js/portal.js": "/prod/assets/js/portal.js",
+    "/prod/assets/js/portal.js.LICENSE.txt": "/prod/assets/js/portal.js.LICENSE.txt",
     "/prod/assets/sitemap.xml": "/prod/assets/sitemap.xml",
     "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/prod/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/prod/blog/como-ahorrar-al-mercar/index.html": "/prod/blog/como-ahorrar-al-mercar/index.html",
@@ -163,8 +170,10 @@
     "/prod/solicitudes_caso/index.html": "/prod/solicitudes_caso/index.html",
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
+    "/final/PORTAL/login.html": "/final/PORTAL/login.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
+    "/final/assets/css/portal.css": "/final/assets/css/portal.css",
     "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/final/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
@@ -266,6 +275,7 @@
     "/final/assets/images/junta/junta-sebastian.png": "/final/assets/images/junta/junta-sebastian.png",
     "/final/assets/images/junta/junta-stella.png": "/final/assets/images/junta/junta-stella.png",
     "/final/assets/images/junta/junta-tatiana.png": "/final/assets/images/junta/junta-tatiana.png",
+    "/final/assets/images/logo_asulado.svg": "/final/assets/images/logo_asulado.svg",
     "/final/assets/images/logo_col.png": "/final/assets/images/logo_col.png",
     "/final/assets/images/logo_corner.png": "/final/assets/images/logo_corner.png",
     "/final/assets/images/logo_sura.png": "/final/assets/images/logo_sura.png",
@@ -304,6 +314,8 @@
     "/final/assets/js/app.js": "/final/assets/js/app.js",
     "/final/assets/js/app.js.LICENSE.txt": "/final/assets/js/app.js.LICENSE.txt",
     "/final/assets/js/app.min.js": "/final/assets/js/app.min.js",
+    "/final/assets/js/portal.js": "/final/assets/js/portal.js",
+    "/final/assets/js/portal.js.LICENSE.txt": "/final/assets/js/portal.js.LICENSE.txt",
     "/final/assets/sitemap.xml": "/final/assets/sitemap.xml",
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
@@ -325,8 +337,10 @@
     "/final/solicitudes_caso/index.html": "/final/solicitudes_caso/index.html",
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
+    "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
     "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
+    "/qa/assets/css/portal.css": "/qa/assets/css/portal.css",
     "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf": "/qa/assets/documentos/Codigo-de-buen-gobierno-Asulado.pdf",
     "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/qa/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/qa/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
@@ -428,6 +442,7 @@
     "/qa/assets/images/junta/junta-sebastian.png": "/qa/assets/images/junta/junta-sebastian.png",
     "/qa/assets/images/junta/junta-stella.png": "/qa/assets/images/junta/junta-stella.png",
     "/qa/assets/images/junta/junta-tatiana.png": "/qa/assets/images/junta/junta-tatiana.png",
+    "/qa/assets/images/logo_asulado.svg": "/qa/assets/images/logo_asulado.svg",
     "/qa/assets/images/logo_col.png": "/qa/assets/images/logo_col.png",
     "/qa/assets/images/logo_corner.png": "/qa/assets/images/logo_corner.png",
     "/qa/assets/images/logo_sura.png": "/qa/assets/images/logo_sura.png",
@@ -466,6 +481,8 @@
     "/qa/assets/js/app.js": "/qa/assets/js/app.js",
     "/qa/assets/js/app.js.LICENSE.txt": "/qa/assets/js/app.js.LICENSE.txt",
     "/qa/assets/js/app.min.js": "/qa/assets/js/app.min.js",
+    "/qa/assets/js/portal.js": "/qa/assets/js/portal.js",
+    "/qa/assets/js/portal.js.LICENSE.txt": "/qa/assets/js/portal.js.LICENSE.txt",
     "/qa/assets/sitemap.xml": "/qa/assets/sitemap.xml",
     "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/qa/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/qa/blog/como-ahorrar-al-mercar/index.html": "/qa/blog/como-ahorrar-al-mercar/index.html",
