Add new background color for login page and update chat functionality

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -3,7 +3,9 @@
     "/dist/assets/js/portal.js": "/dist/assets/js/portal.js",
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
+    "/prod/PORTAL/index.html": "/prod/PORTAL/index.html",
     "/prod/PORTAL/login.html": "/prod/PORTAL/login.html",
+    "/prod/PORTAL/mantenimiento.html": "/prod/PORTAL/mantenimiento.html",
     "/prod/assets/css/app.css": "/prod/assets/css/app.css",
     "/prod/assets/css/app.min.css": "/prod/assets/css/app.min.css",
     "/prod/assets/css/portal.css": "/prod/assets/css/portal.css",
@@ -80,6 +82,7 @@
     "/prod/assets/images/fase.png": "/prod/assets/images/fase.png",
     "/prod/assets/images/fb.png": "/prod/assets/images/fb.png",
     "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
+    "/prod/assets/images/header_logo_w.svg": "/prod/assets/images/header_logo_w.svg",
     "/prod/assets/images/home_elements.svg": "/prod/assets/images/home_elements.svg",
     "/prod/assets/images/img_anciana.webp": "/prod/assets/images/img_anciana.webp",
     "/prod/assets/images/img_atencion_1.png": "/prod/assets/images/img_atencion_1.png",
@@ -170,7 +173,9 @@
     "/prod/solicitudes_caso/index.html": "/prod/solicitudes_caso/index.html",
     "/prod/suscribete/index.html": "/prod/suscribete/index.html",
     "/prod/terminos/index.html": "/prod/terminos/index.html",
+    "/final/PORTAL/index.html": "/final/PORTAL/index.html",
     "/final/PORTAL/login.html": "/final/PORTAL/login.html",
+    "/final/PORTAL/mantenimiento.html": "/final/PORTAL/mantenimiento.html",
     "/final/assets/css/app.css": "/final/assets/css/app.css",
     "/final/assets/css/app.min.css": "/final/assets/css/app.min.css",
     "/final/assets/css/portal.css": "/final/assets/css/portal.css",
@@ -247,6 +252,7 @@
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
+    "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
     "/final/assets/images/img_anciana.webp": "/final/assets/images/img_anciana.webp",
     "/final/assets/images/img_atencion_1.png": "/final/assets/images/img_atencion_1.png",
@@ -337,7 +343,9 @@
     "/final/solicitudes_caso/index.html": "/final/solicitudes_caso/index.html",
     "/final/suscribete/index.html": "/final/suscribete/index.html",
     "/final/terminos/index.html": "/final/terminos/index.html",
+    "/qa/PORTAL/index.html": "/qa/PORTAL/index.html",
     "/qa/PORTAL/login.html": "/qa/PORTAL/login.html",
+    "/qa/PORTAL/mantenimiento.html": "/qa/PORTAL/mantenimiento.html",
     "/qa/assets/css/app.css": "/qa/assets/css/app.css",
     "/qa/assets/css/app.min.css": "/qa/assets/css/app.min.css",
     "/qa/assets/css/portal.css": "/qa/assets/css/portal.css",
@@ -414,6 +422,7 @@
     "/qa/assets/images/fase.png": "/qa/assets/images/fase.png",
     "/qa/assets/images/fb.png": "/qa/assets/images/fb.png",
     "/qa/assets/images/header_logo.svg": "/qa/assets/images/header_logo.svg",
+    "/qa/assets/images/header_logo_w.svg": "/qa/assets/images/header_logo_w.svg",
     "/qa/assets/images/home_elements.svg": "/qa/assets/images/home_elements.svg",
     "/qa/assets/images/img_anciana.webp": "/qa/assets/images/img_anciana.webp",
     "/qa/assets/images/img_atencion_1.png": "/qa/assets/images/img_atencion_1.png",
