--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -67,6 +67,7 @@
     "/prod/assets/images/banner_2_bg.webp": "/prod/assets/images/banner_2_bg.webp",
     "/prod/assets/images/banner_2_foto.png": "/prod/assets/images/banner_2_foto.png",
     "/prod/assets/images/banner_2_foto.webp": "/prod/assets/images/banner_2_foto.webp",
+    "/prod/assets/images/banner_3_foto.webp": "/prod/assets/images/banner_3_foto.webp",
     "/prod/assets/images/banner_home.png": "/prod/assets/images/banner_home.png",
     "/prod/assets/images/banner_home.webp": "/prod/assets/images/banner_home.webp",
     "/prod/assets/images/blog/b1_1.jpg": "/prod/assets/images/blog/b1_1.jpg",
@@ -242,6 +243,7 @@
     "/final/assets/images/banner_2_bg.webp": "/final/assets/images/banner_2_bg.webp",
     "/final/assets/images/banner_2_foto.png": "/final/assets/images/banner_2_foto.png",
     "/final/assets/images/banner_2_foto.webp": "/final/assets/images/banner_2_foto.webp",
+    "/final/assets/images/banner_3_foto.webp": "/final/assets/images/banner_3_foto.webp",
     "/final/assets/images/banner_home.png": "/final/assets/images/banner_home.png",
     "/final/assets/images/banner_home.webp": "/final/assets/images/banner_home.webp",
     "/final/assets/images/blog/b1_1.jpg": "/final/assets/images/blog/b1_1.jpg",
@@ -417,6 +419,7 @@
     "/qa/assets/images/banner_2_bg.webp": "/qa/assets/images/banner_2_bg.webp",
     "/qa/assets/images/banner_2_foto.png": "/qa/assets/images/banner_2_foto.png",
     "/qa/assets/images/banner_2_foto.webp": "/qa/assets/images/banner_2_foto.webp",
+    "/qa/assets/images/banner_3_foto.webp": "/qa/assets/images/banner_3_foto.webp",
     "/qa/assets/images/banner_home.png": "/qa/assets/images/banner_home.png",
     "/qa/assets/images/banner_home.webp": "/qa/assets/images/banner_home.webp",
     "/qa/assets/images/blog/b1_1.jpg": "/qa/assets/images/blog/b1_1.jpg",
