--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -23,6 +23,7 @@
     "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/prod/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/prod/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/prod/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/prod/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/prod/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/prod/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/prod/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -85,6 +86,7 @@
     "/prod/assets/images/blog/blog_3.webp": "/prod/assets/images/blog/blog_3.webp",
     "/prod/assets/images/blog/blog_4.jpg": "/prod/assets/images/blog/blog_4.jpg",
     "/prod/assets/images/blog/blog_4.webp": "/prod/assets/images/blog/blog_4.webp",
+    "/prod/assets/images/chart_accionistas.png": "/prod/assets/images/chart_accionistas.png",
     "/prod/assets/images/fase.png": "/prod/assets/images/fase.png",
     "/prod/assets/images/fb.png": "/prod/assets/images/fb.png",
     "/prod/assets/images/header_logo.svg": "/prod/assets/images/header_logo.svg",
@@ -199,6 +201,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/final/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/final/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -261,6 +264,7 @@
     "/final/assets/images/blog/blog_3.webp": "/final/assets/images/blog/blog_3.webp",
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
+    "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
@@ -375,6 +379,7 @@
     "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/qa/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/qa/assets/documentos/Presidente y Junta Directiva Informe.pdf",
     "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/qa/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/qa/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/qa/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
     "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf": "/qa/assets/documentos/SGC-PO04 Audit Committee Reglamento v3.pdf",
     "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf": "/qa/assets/documentos/SGC-PO07 Board Regulations v1.pdf",
@@ -437,6 +442,7 @@
     "/qa/assets/images/blog/blog_3.webp": "/qa/assets/images/blog/blog_3.webp",
     "/qa/assets/images/blog/blog_4.jpg": "/qa/assets/images/blog/blog_4.jpg",
     "/qa/assets/images/blog/blog_4.webp": "/qa/assets/images/blog/blog_4.webp",
+    "/qa/assets/images/chart_accionistas.png": "/qa/assets/images/chart_accionistas.png",
     "/qa/assets/images/fase.png": "/qa/assets/images/fase.png",
     "/qa/assets/images/fb.png": "/qa/assets/images/fb.png",
     "/qa/assets/images/header_logo.svg": "/qa/assets/images/header_logo.svg",
